--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -111,7 +111,7 @@ build/browser/src/components/gadgets/variant/edit/helpers.js: wAgVsjFs
 build/browser/src/components/gadgets/variant/edit/html.js: IWvsVzsw
 build/browser/src/components/site/edit/render/preview.js: 6u9Xc4vA
 build/browser/src/components/site/preview/css.js: lICXV1Vi
-build/browser/src/components/site/preview/index.js: QLNIWDcj
+build/browser/src/components/site/preview/index.js: PFU608Jx
 build/browser/src/components/site/preview/html.js: dfNXaHfL
 build/browser/src/helpers/state/initial.js: nkcC22km
 build/browser/src/helpers/state/index.js: 38-gBe0M
