--- a/src/components/gadget/edit/schema/exemplars.yaml
+++ b/src/components/gadget/edit/schema/exemplars.yaml
@@ -1,11 +1,9 @@
 name:
   type: text
-  subtype: short
   hint: The name of the gadget
 
 description:
-  type: text
-  subtype: medium
+  type: prose
   hint: A description of the gadget
 
 icon:
@@ -34,7 +32,7 @@ text:
   subtype: longer
   hint: The text to display
 
-hints.alignment:
+brief.alignment:
   title: Alignment
   type: enumerable
   options: alignment
@@ -45,7 +43,7 @@ hints.device:
   options: device
   hint: The device(s) for which the image is optimized
 
-hints.justification:
+brief.justification:
   title: Justification
   type: enumerable
   options: justification
@@ -56,7 +54,7 @@ hints.mode:
   options: mode
   hint: The mode (dark or light) for which the image is optimized
 
-hints.orientation:
+brief.orientation:
   title: Orientation
   type: enumerable
   options: orientation
@@ -68,7 +66,7 @@ hints.proximity:
   options: proximity
   hint: How much space do you want between items?
 
-hints.size:
+brief.size:
   title: Size
   type: range
   options: size
@@ -88,7 +86,7 @@ hints.width:
   options: width
   hint: How much width can items take?
 
-hints.wrap:
+brief.wrap:
   title: Wrap
   type: boolean
   hint: Should items be forced onto a single line or multiple lines?
