--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -31,7 +31,7 @@ build/browser/src/components/site/summarize/index.js: NkwJ9iCb
 build/browser/src/components/site/add/index.js: Ucf2CfYT
 build/browser/src/components/sites/view/index.js: GWHr4Fw3
 build/browser/src/components/gadgets/icon/edit/css.js: i0dWP9Q1
-build/browser/src/components/site/edit/css.js: kY9W30AE
+build/browser/src/components/site/edit/css.js: WMWCQY5R
 build/browser/src/components/site/add/css.js: 0zcCnr4x
 build/browser/src/components/site/edit/html.js: 5PzkXC6_
 build/browser/src/components/site/summarize/css.js: dIiSS6y6
