fixes dashkite/sansa#76

--- a/.sky/hashes.yaml
+++ b/.sky/hashes.yaml
@@ -1,7 +1,7 @@
 build/browser/src/components/gadget/remove/html.js: V9Z6mBUU
 build/browser/src/components/gadget/add/index.js: 5UzJkhdV
 build/browser/src/components/connect/index.js: VcPzQ3X_
-build/browser/src/components/site/edit/css.js: UED68pio
+build/browser/src/components/site/edit/css.js: p60Ft4B-
 build/browser/src/components/icon/select/html.js: l7Ul1-M-
 build/browser/src/components/site/preview/css.js: '-gEn9eEW'
 build/browser/src/components/icon/select/index.js: MmZ95Q8x
