--- a/src/components/gadget/edit/schema/types.yaml
+++ b/src/components/gadget/edit/schema/types.yaml
@@ -131,5 +131,11 @@ variant:
   - image.url
 icon:
   - name
-  - hints.style
-  - icon
+  - name: brief.style
+    title: Style
+    type: enumerable
+    options: style
+    hint: The style of the icon
+  - name: brief.icon
+    title: Icon
+    type: icon
