--- a/src/components/icon/select/machine/transitions/data.yaml
+++ b/src/components/icon/select/machine/transitions/data.yaml
@@ -1,6 +1,11 @@
 # Adapted from https://github.com/Remix-Design/remixicon/blob/master/tags.json
+
+# From thie original file:
+# We improve the search experience of our website by impoving 'tags.json' file.
+# Feel free to create issue or pull request to help us improve this file. You
+# can also email us <jimmy@remixdesign.cn> to share your idea."
+
 {
-  "_comment": "We improve the search experience of our website by impoving 'tags.json' file. Feel free to create issue or pull request to help us improve this file. You can also email us <jimmy@remixdesign.cn> to share your idea.",
   "Arrows": {
       "arrow-left-up": "corner,左上",
       "arrow-up": "send,箭头,向上,发送",
